# cis194

./: .gitignore  CHANGELOG.md  LICENSE  cis194.cabal
hw01/: HW01.hs  Main.hs
hw02/: HW02.hs  Main.hs
hw03/: HW03.hs
hw04/: HW04.hs
hw05/: HW05.hs
hw06/: HW06.hs  Profile.hs
hw08/: HW08.hs
hw1/: Basics.hs  BasicsTest.hs  HW01.hs
hw2/: Functions.hs  FunctionsTest.hs
hw3/: Life.hs  LifeTest.hs
src/framework/CIS194/: HUnit.hs  Testing.hs
src/hw01/: HW01Tests.hs  Main.hs
src/hw02/: HW02Tests.hs  Main.hs
src/hw03/: HW03Tests.hs
src/hw04/: HW04.hs  HW04Tests.hs
src/hw05/: HW05.hs  HW05Tests.hs  Main.hs
src/hw06/: HW06.hs  HW06Tests.hs
