name:                cis194
version:             0.1.0.0
synopsis:            CIS194 homeworks
homepage:            https://github.com/oopsno/cis194
license:             GPL-3
license-file:        LICENSE
author:              Yufei Liu
maintainer:          yufeiliu94@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/framework
  exposed-modules:     Testing
  build-depends:       base        >= 4.9 && < 5
  default-language:    Haskell2010
  

test-suite homework-1
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base        >= 4.9  && < 5
                     , cis194
  other-modules:       HW01, HW01Tests
  hs-source-dirs:      src/hw01
  default-language:    Haskell2010


test-suite homework-2
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base        >= 4.9  && < 5
                     , cis194
  other-modules:       HW02, HW02Tests
  hs-source-dirs:      src/hw02
  default-language:    Haskell2010
