name:                cis194
version:             0.1.0.0
synopsis:            CIS194 homeworks
homepage:            https://github.com/oopsno/cis194
license:             GPL-3
license-file:        LICENSE
author:              Yufei Liu
maintainer:          yufeiliu94@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

data-files:            data/dog-original.jpg
                     , data/dog.jpg
                     , data/transactions.json
                     , data/victims.json
                     , data/new-ids.json
                     , data/new-transactions.json

library
  hs-source-dirs:      src/framework
  exposed-modules:     CIS194.Testing
                     , CIS194.HUnit
  build-depends:       base        >= 4.9 && < 5
                     , HUnit       >= 1.5 && < 2
  default-language:    Haskell2010

executable hw05
  main-is:             Main.hs
  build-depends:       base        >= 4.9  && < 5
                     , aeson       >= 1    && < 2
                     , bytestring  >= 0.10 && < 1
                     , containers  >= 0.5  && < 1
  other-modules:       HW05
                     , Parser
                     , Paths_cis194
  hs-source-dirs:      src/hw05
  default-language:    Haskell2010
  

test-suite homework-1
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base        >= 4.9 && < 5
                     , cis194
  other-modules:       HW01, HW01Tests
  hs-source-dirs:      src/hw01
  default-language:    Haskell2010


test-suite homework-2
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base        >= 4.9 && < 5
                     , cis194
  other-modules:       HW02, HW02Tests
  hs-source-dirs:      src/hw02
  default-language:    Haskell2010

test-suite homework-3
  type:                exitcode-stdio-1.0
  main-is:             HW03Tests.hs
  build-depends:       base        >= 4.9 && < 5
                     , HUnit       >= 1.5 && < 2
                     , cis194
  other-modules:       HW03, Fun
  hs-source-dirs:      src/hw03
  default-language:    Haskell2010

test-suite homework-4
  type:                exitcode-stdio-1.0
  main-is:             HW04Tests.hs
  build-depends:       base        >= 4.9 && < 5
                     , HUnit       >= 1.5 && < 2
                     , cis194
  other-modules:       HW04
  hs-source-dirs:      src/hw04
  default-language:    Haskell2010

test-suite homework-5
  type:                exitcode-stdio-1.0
  main-is:             HW05Tests.hs
  build-depends:       base        >= 4.9  && < 5
                     , HUnit       >= 1.5  && < 2
                     , aeson       >= 1    && < 2
                     , bytestring  >= 0.10 && < 1
                     , containers  >= 0.5  && < 1
                     , cis194
  other-modules:       HW05, Parser
  hs-source-dirs:      src/hw05
  default-language:    Haskell2010