cabal-version:      3.0
name:               cis194
version:            0.1.0.0
synopsis:           Toy code for CIS194

-- A longer description of the package.
-- description:
homepage:           https://github.com/oopsno/cis194

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Liu Yufei
maintainer:         yufeiliu94@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:  Basics

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   hw1
    default-language: Haskell2010

test-suite hw1
    type:             exitcode-stdio-1.0
    main-is:          BasicsTest.hs
    other-modules:
        Basics
    build-depends:
        base ^>=4.14.3.0,
        HUnit >=1.6
    hs-source-dirs:   hw1
    default-language: Haskell2010